--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.15.0
 
 # Mod Properties
-	mod_version = 1.0-SNAPSHOT
+	mod_version = 0.0.0.0unstable
 	maven_group = com.gaq35ms2
 	archives_base_name = naswaymod
 
