--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx3G
 	loader_version=0.15.0
 
 # Mod Properties
-	mod_version = 0.0.1.2
+	mod_version = 0.1_beta
 	maven_group = com.gaq35ms2
 	archives_base_name = naswaymod
 
