--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx3G
 	loader_version=0.15.10
 
 # Mod Properties
-	mod_version = 0.1.2_beta
+	mod_version = 0.1.3
 	maven_group = com.gaq35ms2
 	archives_base_name = naswaymod
 
